# python-transpiler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check and publish.yaml
python_transpiler/: __init__.py  cli.py  import_replacer.py  main.py  mypy.py  polyfill.py  py_310.py  py_38.py  py_39.py  utils.py  visitor.py
tests/: test_cli.py  test_py310.py  test_py38.py  test_py39.py  test_testpy.py  utils.py
tests/fixtures/cli/: pyproject.toml  single_file.py
tests/fixtures/cli/multiple_files/: bar.py
tests/fixtures/cli/package/: foo.py
