[tool.poetry]
authors = ["DetachHead <detachhead@users.noreply.github.com>"]
description = ""
name = "package"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/detachhead/python-project"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.0b2"]
